# cu-profiler

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  action.yml
.github/: dependabot.yml
.github/workflows/: action-smoke.yml  ci.yml  publish.yml  release.yml
.sota/: last-scan.json  rubric.solana-compute-unit-regression.json
crates/cu-profiler-cli/: Cargo.toml  README.md
crates/cu-profiler-cli/src/: args.rs  exit.rs  main.rs
crates/cu-profiler-cli/src/commands/: baseline.rs  bench.rs  ci.rs  comment.rs  compare.rs  explain.rs  import.rs  init.rs  inspect.rs  mod.rs  run.rs
crates/cu-profiler-cli/tests/: cli.rs
crates/cu-profiler-core/: Cargo.toml  README.md
crates/cu-profiler-core/src/: anchor.rs  bench.rs  confidence.rs  config.rs  error.rs  lib.rs  metadata.rs  model.rs  profiler.rs  program_registry.rs  scenario.rs
crates/cu-profiler-core/src/backend/: banks_client.rs  mod.rs  program_test.rs  recorded.rs
crates/cu-profiler-core/src/baseline/: compare.rs  fingerprint.rs  mod.rs
crates/cu-profiler-core/src/budget/: mod.rs  policy.rs  result.rs
crates/cu-profiler-core/src/diagnostics/: mod.rs  rules.rs
crates/cu-profiler-core/src/parser/: compute_budget.rs  cpi_tree.rs  mod.rs  scope_markers.rs  solana_logs.rs
crates/cu-profiler-core/tests/: robustness.rs
crates/cu-profiler-instrumentation/: Cargo.toml  README.md
crates/cu-profiler-instrumentation/src/: lib.rs  macros.rs  markers.rs
crates/cu-profiler-report/: Cargo.toml  README.md
crates/cu-profiler-report/src/: html.rs  json.rs  junit.rs  lib.rs  markdown.rs  model.rs  table.rs
crates/cu-profiler-report/tests/: golden.rs
docs/: anchor.md  architecture.md  baselines.md  bench.md  ci.md  config.md  instrumentation.md  reference.md  report-schema.md  scenarios.md
integration/cu-profiler-mollusk/: Cargo.toml
integration/cu-profiler-mollusk/program/: Cargo.toml
integration/cu-profiler-mollusk/program/src/: lib.rs
integration/cu-profiler-mollusk/src/: lib.rs
integration/cu-profiler-program-test/: Cargo.toml
integration/cu-profiler-program-test/src/: lib.rs
src/: lib.rs  main.rs
tests/fixtures/expected/: swap_with_cpi.report.json  swap_with_cpi.table.txt
