[workspace]
resolver = "2"
members = [
    "crates/cu-profiler-core",
    "crates/cu-profiler-report",
    "crates/cu-profiler-instrumentation",
    "crates/cu-profiler-cli",
]
# Detached: pull the full Solana stack (heavy; openssl-sys won't build on
# Windows). Built only by their own dedicated CI jobs, never by `--workspace`.
exclude = [
    "integration/cu-profiler-program-test",
    "integration/cu-profiler-mollusk",
    "integration/cu-profiler-mollusk/program",
]

[workspace.package]
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MerlijnW70/cu-profiler"
authors = ["cu-profiler contributors"]
description = "Compute-unit profiling, regression testing and budget enforcement for Solana programs"
keywords = ["solana", "compute-units", "profiler", "regression", "ci"]
categories = ["development-tools::profiling", "development-tools::testing"]

[workspace.dependencies]
cu-profiler-core = { path = "crates/cu-profiler-core", version = "0.2.1" }
cu-profiler-report = { path = "crates/cu-profiler-report", version = "0.2.1" }
cu-profiler-instrumentation = { path = "crates/cu-profiler-instrumentation", version = "0.2.1" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "1"
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[profile.release]
lto = "thin"
