[package]
name = "cu-profiler-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line interface for cu-profiler"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[[bin]]
name = "cu-profiler"
path = "src/main.rs"

[features]
default = ["remote"]
# Enable Anchor IDL integration (program labelling from an IDL).
anchor = ["cu-profiler-core/anchor"]
# Enable `import --signature` — fetch a transaction's logs from an RPC over a
# rustls TLS stack (no openssl, no nasm/cmake).
remote = ["dep:ureq"]

[dependencies]
cu-profiler-core = { workspace = true }
cu-profiler-report = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
# Blocking HTTP with rustls + ring by default (openssl-free, Windows-friendly).
ureq = { version = "3", features = ["json"], optional = true }
