[package]
name = "cu-profiler-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core domain model, log parser, budget engine and diagnostics for cu-profiler"

[features]
default = ["json"]
json = ["dep:serde_json"]
# Live execution backends. Skeletons in v1: the trait and types exist, but the
# Solana-dependent implementations are gated so the default build stays pure Rust.
program-test = []
# Anchor IDL support: optional, never a hard dependency in the default build, so
# native Solana stays first-class. Implies `json` (IDLs are JSON).
anchor = ["json"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
