[package]
name = "cu-profiler-report"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Report rendering (table, JSON, Markdown, JUnit, HTML) for cu-profiler"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = ["table", "json", "markdown", "junit", "html"]
table = []
json = []
markdown = []
junit = []
html = []

[dependencies]
cu-profiler-core = { workspace = true }
serde_json = { workspace = true }
